--- a/SimTECH/SimTECH/Pages/Season/Entrants/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/PowerRankings.razor
@@ -1,6 +1,6 @@
 ﻿@inject SeasonService SeasonService
 
-<MudContainer MaxWidth="MaxWidth.ExtraLarge">
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="px-0">
     @if (DriverRankings != null)
     {
         <MudPaper MinHeight="60px">
