--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverResults.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverResults.razor
@@ -29,7 +29,7 @@
                     <CountryFlag Code="@round.Value" Size="FlagSize.Small" />
                 </MudTh>
             }
-            <MudTh class="number-col">AVG</MudTh>
+            <MudTh Class="number-col">AVG</MudTh>
         </HeaderContent>
         <RowTemplate>
             <MudTd Class="number-col">
