--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
@@ -2,7 +2,7 @@
 @inject SeasonEntrantService EntrantService
 @inject IDialogService DialogService
 
-<MudContainer MaxWidth="MaxWidth.ExtraLarge">
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="px-0">
     <MudPaper MinHeight="60px">
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Drivers</MudText>
