--- a/SimTECH/SimTECH/Pages/Season/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Season/Calendar.razor
@@ -19,7 +19,7 @@
             }
         </MudStack>
     </MudPaper>
-    <MudTable Items="@RaceCalendar">
+    <MudTable Items="@RaceCalendar" Dense="true">
         <HeaderContent>
             <MudTh Class="number-col">Round</MudTh>
             <MudTh>Country</MudTh>
