--- a/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
+++ b/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
@@ -211,7 +211,7 @@
     private List<CompletedDevelopment> SummaryDeveloped = new();
     private static readonly DialogOptions SummaryDialogOptions = new()
     {
-        MaxWidth = MaxWidth.ExtraLarge,
+        MaxWidth = MaxWidth.ExtraExtraLarge,
         CloseButton = true,
     };
 
