--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorStandings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorStandings.razor
@@ -11,7 +11,7 @@
             <MudTh>PTS</MudTh>
         </HeaderContent>
         <RowTemplate>
-            <MudTd DataLabel="#" Class="number-col">
+            <MudTd Class="number-col">
                 <DriverPosition Number="@context.Position" Colour="@context.Colour" Accent="@context.Accent" />
             </MudTd>
             <MudTd Class="accent-cell">
