--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverStandings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverStandings.razor
@@ -20,7 +20,7 @@
                 <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
             </MudTd>
             <MudTd>
-                <MudStack Row="true">
+                <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                     <MudText>@context.Name</MudText>
                     <MudSpacer></MudSpacer>
                     <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
