--- a/SimTECH/SimTECH/Pages/_Host.cshtml
+++ b/SimTECH/SimTECH/Pages/_Host.cshtml
@@ -26,7 +26,7 @@
             An error has occurred. This application may no longer respond until reloaded.
         </environment>
         <environment include="Development">
-            An unhandled exception has occurred. See browser dev tools for details.
+            A yo, shit just got fucked cuz unhandled exception. See browser dev tools for details.
         </environment>
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
