--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -24,7 +24,7 @@
 
                         <MudSpacer />
 
-                        <MudButtonGroup Color="Color.Primary" Variant="Variant.Filled">
+                        <MudButtonGroup Color="Color.Primary" Variant="Variant.Outlined">
                             <MudButton OnClick="GoToStandings">Standings</MudButton>
                             <ScreenshotButton TargetId="postrace-container" />
                         </MudButtonGroup>
